solve overflow

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
   overflow-x: hidden;
 }
 
+.fxheader {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
 .box-1 {
   background-color: black;
 }
@@ -252,6 +258,11 @@ a.update:hover {
 
 /*  fullwidth  */
 
+.nonecontent {
+	display: block;
+	height: 50px;
+}
+
 .highlight-container {
   display: flex;
   flex-direction: column;
@@ -270,8 +281,6 @@ a.update:hover {
   display: block;
   max-width: 100%;
   max-height: 100%;
-  will-change: background-color;
-  z-index: 2;
 }
 
 .first-highlight:hover {
@@ -409,6 +418,7 @@ a.update:hover {
 main {
   margin-bottom: 200px;
   width: 100vw;
+	overflow-x: hidden;
 }
 
 .space {
@@ -678,7 +688,8 @@ a.sm {
 
 /* CSS  Media  Query */
 @media (min-width: 768px) and (max-width: 1023px) {
-  .mobile-header {
+
+	.mobile-header {
     display: none;
   }
 
@@ -698,6 +709,12 @@ a.sm {
   }
 
   /*  yinkas  start  */
+
+	.nonecontent {
+		display: block;
+		height: 90px;
+	}
+
   .highlight-container {
     display: flex;
     flex-direction: row;
@@ -766,7 +783,7 @@ a.sm {
   }
 
   .latest-add-container {
-    margin: 50px;
+    margin: 2px;
   }
 
   .news_container {
@@ -888,6 +905,11 @@ a.sm {
   }
 
   /*  yinkas  start  */
+
+	.nonecontent {
+		display: block;
+		height: 110px;
+	}
 
   .highlight-container {
     display: flex;
